# computacao-grafica-ga

./: CMakeLists.txt  README.md
src/: Face.cpp  Face.h  Group.cpp  Group.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  OBJReader-coisa-de-corno.cpp  OBJReader.cpp  OBJReader.h  Obj3D.cpp  Obj3D.h  bkp.cfg  config.cfg  main.cpp
